k8s/base/longhorn-system/longhorn/app/gateway.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: longhorn-frontend
spec:
  parentRefs:
    - name: internal
      namespace: kube-system
      sectionName: https
  hostnames:
    - longhorn.siron.casa
  rules:
    - backendRefs:
        - kind: Service
          name: longhorn-frontend
          namespace: longhorn-system
          port: 80
      matches:
        - path:
            type: PathPrefix
            value: /
