k8s/base/longhorn-system/longhorn/app/ingress.yaml
---
# https://kubernetes.io/docs/concepts/services-networking/ingress/
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: longhorn
spec:
  ingressClassName: tailscale
  defaultBackend:
    service:
      name: longhorn-frontend
      port:
        number: 80
  tls:
    - hosts:
        - longhorn.ragdoll-moountain.ts.net
